--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="fortmatic-site-verification"
+          content="VX2sV8B5roETAbdU" />
+    <link rel="icon"
+          href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1" />
+    <meta name="theme-color"
+          content="#000000" />
+    <meta name="msapplication-TileColor"
+          content="#ffffff" />
+    <meta name="description"
+          content="See the rarest CyptoPunks, Bored Ape Yacht Club and many more NFT collection." />
+
+
+    <!-- <meta property="og:url"
+          content="https://anime.limited" /> -->
+    <meta property="og:type"
+          content="website" />
+    <meta property="og:title"
+          content="WeGo Battle" />
+    <meta property="og:description"
+          content="See the rarest CyptoPunks, Bored Ape Yacht Club and many more NFT collection." />
+
+
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest"
+          href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,8 +43,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>WeGo Battle</title>
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
@@ -40,4 +60,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+
 </html>
