--- a/public/index.html
+++ b/public/index.html
@@ -1,32 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-      <meta charset="utf-8" />
-      <meta name="fortmatic-site-verification" content="VX2sV8B5roETAbdU" />
-      <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-      <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <meta name="theme-color" content="#000000" />
-      <meta name="msapplication-TileColor" content="#ffffff" />
-      <meta name="description"
-            content="See the rarest CyptoPunks, Bored Ape Yacht Club and many more NFT collections." />
+  <head>
+    <meta charset="utf-8" />
+    <meta name="fortmatic-site-verification"
+          content="VX2sV8B5roETAbdU" />
+    <link rel="icon"
+          href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1" />
+    <meta name="theme-color"
+          content="#000000" />
+    <meta name="msapplication-TileColor"
+          content="#ffffff" />
+    <meta name="description"
+          content="See the rarest CyptoPunks, Bored Ape Yacht Club and many more NFT collections." />
 
 
-      <!-- <meta property="og:url"
-          content="https://anime.limited" /> -->
-      <meta property="og:type" content="website" />
-      <meta property="og:title" content="WeGo Battle" />
-      <meta property="og:description"
-            content="See the rarest CyptoPunks, Bored Ape Yacht Club and many more NFT collection." />
+    <meta property="og:url"
+          content="https://wegonft.com/logo.png" />
+    <meta property="og:type"
+          content="website" />
+    <meta property="og:title"
+          content="WeGo Battle" />
+    <meta property="og:description"
+          content="See the rarest CyptoPunks, Bored Ape Yacht Club and many more NFT collection." />
 
 
 
-      <!--
+    <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-      <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-      <!--
+    <link rel="apple-touch-icon"
+          sizes="180x180"
+          href="/apple-touch-icon.png">
+    <link rel="icon"
+          type="image/png"
+          sizes="32x32"
+          href="/favicon-32x32.png">
+    <link rel="icon"
+          type="image/png"
+          sizes="16x16"
+          href="/favicon-16x16.png">
+    <link rel="manifest"
+          href="/site.webmanifest">
+    <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -35,13 +54,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-      <title>WeGo Battle</title>
-</head>
+    <title>WeGo Battle</title>
+  </head>
 
-<body>
-      <noscript>You need to enable JavaScript to run this app.</noscript>
-      <div id="root"></div>
-      <!--
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -51,7 +70,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-      <section id="admin" style="display: none;"></section>
-</body>
+    <section id="admin"
+             style="display: none;"></section>
+  </body>
 
 </html>
